相关界面构建（还需完善）

--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "docs:dev": "vitepress dev --open",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview"
+  },
+  "dependencies": {
+    "pnpm": "^8.15.1"
   }
 }
