--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "vitepress": "1.0.0-rc.40"
   },
   "scripts": {
-    "docs:dev": "vitepress dev --open",
+    "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview"
   },
